Added User Views, CRUD, ChangePassword

--- a/SchoolDiarySystem/Views/Review/Details.cshtml
+++ b/SchoolDiarySystem/Views/Review/Details.cshtml
@@ -17,14 +17,10 @@
         <!-- Student Table Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
-                <div class="heading-layout1">
-                    <div class="item-title">
-                        <h3>Comment Details</h3>
-                    </div>
-                </div>
                 <div class="single-info-details">
                     <div class="item-content">
                         <div class="header-inline item-header">
+                            <h3>Review Details</h3>
                             <div class="header-elements">
                                 <ul>
                                     <li><a href="#"><i class="fas fa-print"></i></a></li>
