--- a/SchoolDiarySystem/Views/Room/Index.cshtml
+++ b/SchoolDiarySystem/Views/Room/Index.cshtml
@@ -23,11 +23,11 @@
                     </div>
                     <form class="new-added-form">
                         <div class="row">
-                                <div class="col-12 form-group mg-t-8">
-                                    <p>
-                                        @Html.ActionLink("Create", "Create", "Room", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
-                                    </p>
-                                </div>
+                            <div class="col-12 form-group mg-t-8">
+                                <p>
+                                    @Html.ActionLink("Create", "Create", "Room", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
+                                </p>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -93,6 +93,25 @@
 </div>
 
 @section Scripts {
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="~/Content/img/favicon.png">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="~/Content/css/normalize.css">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="~/Content/css/main.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
+    <!-- Fontawesome CSS -->
+    <link rel="stylesheet" href="~/Content/css/all.min.css">
+    <!-- Flaticon CSS -->
+    <link rel="stylesheet" href="~/Content/fonts/flaticon.css">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="~/Content/css/animate.min.css">
+    <!-- Data Table CSS -->
+    <link rel="stylesheet" href="~/Content/css/jquery.dataTables.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="~/Content/style.css">
+
     <!-- jquery-->
     <script src="~/Content/js/jquery-3.3.1.min.js"></script>
     <!-- Plugins js -->
@@ -115,6 +134,8 @@
     <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
+    <!-- Data Table Js -->
+    <script src="~/Content/js/jquery.dataTables.min.js"></script>
     <!-- Modernize js -->
     <script src="~/Content/js/modernizr-3.6.0.min.js"></script>
 }
