--- a/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
@@ -146,17 +146,9 @@
                     </ul>
                 </div>
             </div>
-            <!-- Social Media End Here -->
-            <!-- Footer Area Start Here -->
-            <!-- Footer Area End Here -->
-            <!-- Sidebar Area End Here -->
-            @RenderBody()
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
+            <div class="dashboard-content-one">
+                @RenderBody()
+            </div>
         </div>
         <!-- Page Area End Here -->
     </div>
