--- a/SchoolDiarySystem/Views/Class/Index.cshtml
+++ b/SchoolDiarySystem/Views/Class/Index.cshtml
@@ -1,130 +1,153 @@
 ﻿@using SchoolDiarySystem.Models
-@model IEnumerate<Class>
+@model IEnumerable<Class>
 
-        <div class="dashboard-page-one">
-            <div class="dashboard-content-one">
-                <!-- Breadcubs Area Start Here -->
-                <div class="breadcrumbs-area">
-                    <h3>Class</h3>
-                    <ul>
-                        <li>
-                            <a href="~/Views/Admin/Index.cshtml">Home</a>
-                        </li>
-                        <li>All Classes</li>
-                    </ul>
-                </div>
-                <div class="col-4-xxxl col-12">
-                    <div class="card height-auto">
-                        <div class="card-body">
-                            <div class="heading-layout1">
-                                <div class="item-title">
-                                    <h3>Create A Class</h3>
-                                </div>
-                            </div>
-                            <form class="new-added-form">
-                                <div class="row">
-                                    <div class="col-12 form-group mg-t-8">
-                                        <p>
-                                            @Html.ActionLink("Create", "Create", "Class", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
-                                        </p>
-                                    </div>
-                                </div>
-                            </form>
+<div class="dashboard-page-one">
+    <div class="dashboard-content-one">
+        <!-- Breadcubs Area Start Here -->
+        <div class="breadcrumbs-area">
+            <h3>Class</h3>
+            <ul>
+                <li>
+                    <a href="~/Views/Admin/Index.cshtml">Home</a>
+                </li>
+                <li>All Classes</li>
+            </ul>
+        </div>
+        <div class="col-4-xxxl col-12">
+            <div class="card height-auto">
+                <div class="card-body">
+                    <div class="heading-layout1">
+                        <div class="item-title">
+                            <h3>Create A Class</h3>
                         </div>
                     </div>
-                </div>
-                <!-- Breadcubs Area End Here -->
-                <!-- Teacher Table Area Start Here -->
-                <div class="card height-auto">
-                    <div class="card-body">
-                        <div class="heading-layout1">
-                            <div class="item-title">
-                                <h3>All Classes Data</h3>
+                    <form class="new-added-form">
+                        <div class="row">
+                            <div class="col-12 form-group mg-t-8">
+                                <p>
+                                    @Html.ActionLink("Create", "Create", "Class", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
+                                </p>
                             </div>
                         </div>
-                        <form class="mg-b-20">
-                            <div class="row gutters-8">
-                                <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
-                                    <input type="text" placeholder="Search by Name ..." class="form-control">
-                                </div>
-                                <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
-                                    <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
-                                </div>
-                            </div>
-                        </form>
-                        <div class="table-responsive">
-                            <table class="table display data-table text-nowrap">
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Class Number</th>
-                                        <th>Room Type</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                @*<tfoot>
-                            <tr>
-                                <th>@Html.DisplayNameFor(m => m.FirstName)</th>
-                                <th>@Html.DisplayNameFor(m => m.LastName)</th>
-                                <th>@Html.DisplayNameFor(m => m.Gender)</th>
-                                <th>@Html.DisplayNameFor(m => m.City)</th>
-                                <th>@Html.DisplayNameFor(m => m.Qualification)</th>
-                                <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
-                                <th>@Html.DisplayNameFor(m => m.Email)</th>
-                                <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
-                                <th></th>
-                            </tr>
-                        </tfoot>*@
-                            <tbody>
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(m => item.Teacher.FullName)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(m => item.ClassNo)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(m => item.Room.RoomType)
-                                        </td>
-
-                                        <td>
-                                            @Html.ActionLink("Update", "Update", new { id = item.ClassID })
-                                            @Html.ActionLink("Details", "Details", new { id = item.ClassID })
-                                            @Html.ActionLink("Delete", "Delete", new { id = item.ClassID })
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                            </table>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
+        <!-- Breadcubs Area End Here -->
+        <!-- Teacher Table Area Start Here -->
+        <div class="card height-auto">
+            <div class="card-body">
+                <div class="heading-layout1">
+                    <div class="item-title">
+                        <h3>All Classes Data</h3>
+                    </div>
+                </div>
+                <form class="mg-b-20">
+                    <div class="row gutters-8">
+                        <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
+                            <input type="text" placeholder="Search by Name ..." class="form-control">
+                        </div>
+                        <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
+                            <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                        </div>
+                    </div>
+                </form>
+                <div class="table-responsive">
+                    <table class="table display data-table text-nowrap">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Class Number</th>
+                                <th>Room Type</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        @*<tfoot>
+                                <tr>
+                                    <th>@Html.DisplayNameFor(m => m.FirstName)</th>
+                                    <th>@Html.DisplayNameFor(m => m.LastName)</th>
+                                    <th>@Html.DisplayNameFor(m => m.Gender)</th>
+                                    <th>@Html.DisplayNameFor(m => m.City)</th>
+                                    <th>@Html.DisplayNameFor(m => m.Qualification)</th>
+                                    <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
+                                    <th>@Html.DisplayNameFor(m => m.Email)</th>
+                                    <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
+                                    <th></th>
+                                </tr>
+                            </tfoot>*@
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Teacher.FullName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.ClassNo)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Room.RoomType)
+                                    </td>
 
-    @section Scripts {
-        <!-- jquery-->
-        <script src="~/Content/js/jquery-3.3.1.min.js"></script>
-        <!-- Plugins js -->
-        <script src="~/Content/js/plugins.js"></script>
-        <!-- Popper js -->
-        <script src="~/Content/js/popper.min.js"></script>
-        <!-- Bootstrap js -->
-        <script src="~/Content/js/bootstrap.min.js"></script>
-        <!-- Counterup Js -->
-        <script src="~/Content/js/jquery.counterup.min.js"></script>
-        <!-- Moment Js -->
-        <script src="~/Content/js/moment.min.js"></script>
-        <!-- Waypoints Js -->
-        <script src="~/Content/js/jquery.waypoints.min.js"></script>
-        <!-- Scroll Up Js -->
-        <script src="~/Content/js/jquery.scrollUp.min.js"></script>
-        <!-- Full Calender Js -->
-        <script src="~/Content/js/fullcalendar.min.js"></script>
-        <!-- Chart Js -->
-        <script src="~/Content/js/Chart.min.js"></script>
-        <!-- Custom Js -->
-        <script src="~/Content/js/main.js"></script>
-    }
+                                    <td>
+                                        @Html.ActionLink("Update", "Update", new { id = item.ClassID })
+                                        @Html.ActionLink("Details", "Details", new { id = item.ClassID })
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.ClassID })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="~/Content/img/favicon.png">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="~/Content/css/normalize.css">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="~/Content/css/main.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
+    <!-- Fontawesome CSS -->
+    <link rel="stylesheet" href="~/Content/css/all.min.css">
+    <!-- Flaticon CSS -->
+    <link rel="stylesheet" href="~/Content/fonts/flaticon.css">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="~/Content/css/animate.min.css">
+    <!-- Data Table CSS -->
+    <link rel="stylesheet" href="~/Content/css/jquery.dataTables.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="~/Content/style.css">
+
+    <!-- jquery-->
+    <script src="~/Content/js/jquery-3.3.1.min.js"></script>
+    <!-- Plugins js -->
+    <script src="~/Content/js/plugins.js"></script>
+    <!-- Popper js -->
+    <script src="~/Content/js/popper.min.js"></script>
+    <!-- Bootstrap js -->
+    <script src="~/Content/js/bootstrap.min.js"></script>
+    <!-- Counterup Js -->
+    <script src="~/Content/js/jquery.counterup.min.js"></script>
+    <!-- Moment Js -->
+    <script src="~/Content/js/moment.min.js"></script>
+    <!-- Waypoints Js -->
+    <script src="~/Content/js/jquery.waypoints.min.js"></script>
+    <!-- Scroll Up Js -->
+    <script src="~/Content/js/jquery.scrollUp.min.js"></script>
+    <!-- Full Calender Js -->
+    <script src="~/Content/js/fullcalendar.min.js"></script>
+    <!-- Chart Js -->
+    <script src="~/Content/js/Chart.min.js"></script>
+    <!-- Custom Js -->
+    <script src="~/Content/js/main.js"></script>
+    <!-- Data Table Js -->
+    <script src="~/Content/js/jquery.dataTables.min.js"></script>
+    <!-- Modernize js -->
+    <script src="~/Content/js/modernizr-3.6.0.min.js"></script>
+}
