--- a/SchoolDiarySystem/Views/Review/Index.cshtml
+++ b/SchoolDiarySystem/Views/Review/Index.cshtml
@@ -21,7 +21,7 @@
                     <div class="card-body">
                         <div class="heading-layout1">
                             <div class="item-title">
-                                <h3>Notice Board</h3>
+                                <h3>Review Board</h3>
                             </div>
                             <div class="dropdown">
                                 <a class="dropdown-toggle" href="#" role="button"
@@ -37,10 +37,10 @@
                         <form class="mg-b-20">
                             <div class="row gutters-8">
                                 <div class="col-lg-5 col-12 form-group">
-                                    <input type="text" placeholder="Search by Date ..." class="form-control">
+                                    <input type="date" placeholder="Search by Date ..." class="form-control">
                                 </div>
                                 <div class="col-lg-5 col-12 form-group">
-                                    <input type="text" placeholder="Search by Title ..." class="form-control">
+                                    <input type="text" placeholder="Search by Subject ..." class="form-control">
                                 </div>
                                 <div class="col-lg-2 col-12 form-group">
                                     <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
@@ -53,7 +53,7 @@
                                 <div class="notice-list">
                                     <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.ReviewDate)</div>
                                     <h6 class="notice-title">
-                                        <a href="#">
+                                        <a href="@Url.Action("Details", new { id = item.ReviewID })" >
                                             @Html.DisplayFor(m => item.Review)
                                         </a>
                                     </h6>
