--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -149,14 +149,12 @@
                     </ul>
                 </div>
             </div>
-            <!-- Social Media End Here -->
-            <!-- Footer Area Start Here -->
-            <!-- Footer Area End Here -->
-            <!-- Sidebar Area End Here -->
-            @RenderBody()
+            <div class="dashboard-content-one">
+                @RenderBody()
+            </div>
         </div>
-        <!-- Page Area End Here -->
-    </div>
+        </div>
+
     <!-- jquery-->
     <script src="~/Content/js/jquery-3.3.1.min.js"></script>
     <!-- Plugins js -->
@@ -165,10 +163,22 @@
     <script src="~/Content/js/popper.min.js"></script>
     <!-- Bootstrap js -->
     <script src="~/Content/js/bootstrap.min.js"></script>
+    <!-- Counterup Js -->
+    <script src="~/Content/js/jquery.counterup.min.js"></script>
+    <!-- Moment Js -->
+    <script src="~/Content/js/moment.min.js"></script>
+    <!-- Waypoints Js -->
+    <script src="~/Content/js/jquery.waypoints.min.js"></script>
     <!-- Scroll Up Js -->
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
+    <!-- Full Calender Js -->
+    <script src="~/Content/js/fullcalendar.min.js"></script>
+    <!-- Chart Js -->
+    <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
+    <!-- Modernize js -->
+    <script src="~/Content/js/modernizr-3.6.0.min.js"></script>
 
     @RenderSection("scripts", required: false)
 
