--- a/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
@@ -125,37 +125,11 @@
                         <li class="nav-item">
                             <a href="@Url.Action("Index", "Director")" class="nav-link"><i class="flaticon-dashboard"></i><span>Dashboard</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link"><i class="flaticon-classmates"></i><span>Users</span></a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "User")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Users
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "User")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add Users
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "User")" class="nav-link"><i class="flaticon-user"></i><span>Users</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="flaticon-multiple-users-silhouette"></i><span>Staff Absence</span>
-                            </a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Absence")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Staff Absence List
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Absence")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add Absence
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Absence")" class="nav-link"><i class="flaticon-calendar"></i><span>Absences</span></a>
                         </li>
                         <li class="nav-item">
                             <a href="@Url.Action("Index", "Comment")" class="nav-link"><i class="flaticon-dashboard"></i><span>Comments</span></a>
@@ -163,20 +137,12 @@
                     </ul>
                 </div>
             </div>
-            <!-- Social Media End Here -->
-            <!-- Footer Area Start Here -->
-            <!-- Footer Area End Here -->
-            <!-- Sidebar Area End Here -->
-            @RenderBody()
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
+            <div class="dashboard-content-one">
+                @RenderBody()
+            </div>
         </div>
-        <!-- Page Area End Here -->
     </div>
+
     <!-- jquery-->
     <script src="~/Content/js/jquery-3.3.1.min.js"></script>
     <!-- Plugins js -->
@@ -185,8 +151,20 @@
     <script src="~/Content/js/popper.min.js"></script>
     <!-- Bootstrap js -->
     <script src="~/Content/js/bootstrap.min.js"></script>
+    <!-- Counterup Js -->
+    <script src="~/Content/js/jquery.counterup.min.js"></script>
+    <!-- Moment Js -->
+    <script src="~/Content/js/moment.min.js"></script>
+    <!-- Waypoints Js -->
+    <script src="~/Content/js/jquery.waypoints.min.js"></script>
     <!-- Scroll Up Js -->
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
+    <!-- Full Calender Js -->
+    <script src="~/Content/js/fullcalendar.min.js"></script>
+    <!-- Select 2 Js -->
+    <script src="~/Content/js/select2.min.js"></script>
+    <!-- Chart Js -->
+    <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
 
